--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -23,15 +23,16 @@
 				<form action="">
 				<label>Username:</label>
 				<div>
-					<input type="text" placeholder="Username" required="required">
+					<input type="text" id="userNameInput" placeholder="Username" required="required">
 				</div>
 				<label>Password:</label>
 				<div>
-					<input type="password" placeholder="Password" required="required">
+					<input type="password" id="passwordInput" placeholder="Password" required="required">
 				</div>
 				<div>
-					<input type="submit" value="Login">
+					<input type="submit" id="logInSubmit" value="Login"> 
 				</div>
+				<p id="message"></p>
 				<div>
 					<a id="createAccountLink" href="#">Don't have account? Register now</a>
 				</div>
@@ -39,5 +40,15 @@
 			</div>
 		</section>
 	</nav>
+	<input type="text" name="search" id ="search" placeholder="Search videos..">
+	<input type="submit" name="search-button" value="Search">
+	<div class="grid-container">
+		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+	</div>
 </body>
 </html>
