Created model and sql script

--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -40,7 +40,7 @@
 			</div>
 		</section>
 	</nav>
-	<input type="text" name="search" id ="search" placeholder="Search videos..">
+	<input type="text" name="search" id ="search" placeholder="Search videos...">
 	<input type="submit" name="search-button" value="Search">
 	<div class="grid-container">
 		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
