Writing DAO files

--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -50,5 +50,27 @@
 		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
 		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
 	</div>
+	<div class="footer-container">
+	<section class="notice">
+		<p id="notice-paragraph">This site DOES NOT! stream videos or host content of<br>
+		 any kind, the videos you watch are hosted and shown <br>
+		from sites such as YouTube, Tudou, Megavideo, etc.<br>
+		 Any videos shown on 3rd party websites have passed <br>
+		 their own stringent internal vetting <br>
+		 procedures and as such are assumed as fully authorized for <br>
+		 publication by the content owners</p>
+		 </section>
+		 <section class="logo-rights">
+		<p class="footer-logo">Copyright murder</p>
+		 <p class="rights">Copyright &copy; Copyright murder All Rights Reserved</p>
+		 </section>
+		 <section class="social-links">
+		 <p>Follow us on:</p>
+		 <i class="fa fa-facebook-square" style="font-size:36px;margin-left: 7%;"></i>
+		 <i class="fa fa-instagram" style="font-size:36px"></i>
+		 <i class="fa fa-linkedin-square" style="font-size:36px"></i>
+		 <i class="fa fa-twitter" style="font-size:36px"></i>
+		 </section>
+	</div>
 </body>
 </html>
