Created sign up page,and servlet

--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -27,14 +27,16 @@
 </div>
 	<input type="text" name="search" id ="search" placeholder="Search videos...">
 	<input type="submit" name="search-button" value="Search">
-	<div class="grid-container" id="main">
-		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
-		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
-		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
-		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
-		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
-		<div class="grid-item"><img alt="" src="photos/slika.jpg"></div>
+	<section class="container">
+	<div class="row">
+		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
+		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
+		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
+		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
+		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
+		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
 	</div>
+	</section>
 	<div class="footer-container">
 	<section class="notice">
 		<p id="notice-paragraph">This site DOES NOT! stream videos or host content of<br>
