--- a/ProjekatWeb/WebContent/Register.html
+++ b/ProjekatWeb/WebContent/Register.html
@@ -16,9 +16,10 @@
   <div class="container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
+    <p>Fields with * are required</p>
     <hr>
 
-    <label><b>Username</b></label>
+    <label><b>Username *</b></label>
     <input type="text" placeholder="Enter Username" name="userName" required>
 	
 	 <label><b>Name</b></label>
@@ -27,15 +28,15 @@
 	 <label><b>Surname</b></label>
     <input type="text" placeholder="Enter Surname" name="surname">
 	
-    <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <label><b>Password *</b></label>
+    <input type="password" placeholder="Enter Password" name="password" required>
 
-     <label><b>Email</b></label>
+     <label><b>Email *</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
-    
+    <p id="message"></p>
     <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
+      <button type="submit" class="signupbtn" id="submit">Sign Up</button>
+      <button type="button" class="cancelbtn" id="cancel" onclick="btnCancel()">Cancel</button>
     </div>
   </div>
 </form>
