Created dinamic home page

--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -10,12 +10,12 @@
 <title>Copyright murder</title>
 </head>
 <body>
-<div class="topnav" id="myTopnav">
-  <a href="index.html">Copyright murder</a>
+<nav class="topnav" id="myTopnav">
+  <a href="index.html">Copyright <span style="color: darkturquoise;">murder</span></a>
   <a href="#contact" onclick="openNav()">Sign in</a>
   <a href="index.html" class="active">Home</a>
-</div> 
-<div id="mySidenav" class="sidenav">
+</nav> 
+<div id="mySidelogin" class="sidelogin">
  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <label><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="userName"  required>
@@ -29,15 +29,10 @@
 	<input type="submit" name="search-button" value="Search">
 	<section class="container">
 	<div class="row">
-		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
-		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
-		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
-		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
-		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
-		<div class="column"><p><img alt="" src="photos/slika.jpg"></p></div>
+	
 	</div>
 	</section>
-	<div class="footer-container">
+	<footer class="footer-container">
 	<section class="notice">
 		<p id="notice-paragraph">This site DOES NOT! stream videos or host content of<br>
 		 any kind, the videos you watch are hosted and shown <br>
@@ -58,6 +53,6 @@
 		 <i class="fa fa-linkedin-square" style="font-size:36px"></i>
 		 <i class="fa fa-twitter" style="font-size:36px"></i>
 		 </section>
-	</div>
+	</footer>
 </body>
 </html>
