Create subscribe functionality

--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -13,7 +13,7 @@
 <body>
 	<nav class="topnav" id="myTopnav">
 		<a href="index.html">Copyright <span style="color: darkturquoise;">murder</span></a>
-		<a href="#contact" onclick="openNav()">Sign out</a> <a
+		<a href="LogOutServlet">Sign out</a> <a
 			href="index.html" class="active">Home</a>
 	</nav>
 	<div class="container">
