Created functionality for comment

--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -31,6 +31,7 @@
 							<p id="description"></p>
 							<p id="sub">
 								<button id="subscribe">Subscribe</button>
+								<button id="unsubscribe">Unsubscribe</button>
 							</p>
 						</div>
 					</div>
