--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -32,7 +32,7 @@
 			</div>
 			<div class="owner-info">
 				<p class="user-link">
-					<img src="photos/slika.jpg" class="avatar"><a href="#"
+					<img src="photos/slika.jpg" class="avatar"><a href=""
 						id="userName"></a>
 				</p>
 				<button id="subscribe">Subscribe</button>
@@ -54,26 +54,11 @@
 			</div>
 
 			<div class="add-comment">
-				<textarea name="Text1" placeholder="Add your comment" maxlength="80"></textarea>
+				<textarea name="Text1" id="textArea" placeholder="Add your comment" maxlength="80"></textarea>
 				<input type="submit" value="Comment" id="submit-comment">
 			</div>
-			<div class="comment">
-				<p class="user-link">
-					<img src="photos/slika.jpg" class="avatar"><a href="#"
-						id="userName">Vlasnika komentara</a>
-				</p>
-				<div class="like-dislike">
-					<i class="fa fa-thumbs-o-up" style="font-size: 20px;" id="like"></i>
-					<p id="like-number" style="font-size: 16px;">202</p>
-					<i class="fa fa-thumbs-o-down" style="font-size: 20px;"
-						id="dislike"></i>
-					<p id="dislike-number" style="font-size: 16px;">102</p>
-				</div>
-				<p id="date">12.5.2018</p>
-				<p>this is some comment</p>
-			</div>
-			<div class="comment">
-				<p>this is some comment</p>
+			<div class="comments">
+	
 			</div>
 		</div>
 		<div class="menu-button">
