Created like and dislike functionality

--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -24,10 +24,10 @@
 				<h2 id="videoName"></h2>
 				<p id="videoViews"></p>
 				<div class="like-dislike">
-					<i class="fa fa-thumbs-o-up" id="like"></i>
-					<p id="like-number"></p>
-					<i class="fa fa-thumbs-o-down" id="dislike"></i>
-					<p id="dislike-number"></p>
+					<i class="fa fa-thumbs-o-up" id="likeVideo"></i>
+					<p id="like-video-number"></p>
+					<i class="fa fa-thumbs-o-down" id="dislikeVideo"></i>
+					<p id="dislike-video-number"></p>
 				</div>
 			</div>
 			<div class="owner-info">
