--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div id="subs">
-			<h3>Subscribers:</h3>
+			<h3>Subscribed on:</h3>
 			<div class="row" id="subscribers">
 
 			</div>
