--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -13,8 +13,8 @@
 <body>
 	<nav class="topnav" id="myTopnav">
 		<a href="index.html">Copyright <span style="color: darkturquoise;">murder</span></a>
-		<a href="LogOutServlet">Sign out</a> <a
-			href="index.html" class="active">Home</a>
+		<a href="LogOutServlet">Sign out</a>
+		 <a href="index.html" class="active">Home</a>
 	</nav>
 	<div class="container">
 		<div class="user-info">
