Created Admin page,and delete user functionality

--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -11,8 +11,8 @@
 <title>Video</title>
 </head>
 <body>
-	<nav class="topnav" id="myTopnav">
-		<a href="index.html">Copyright <span style="color: darkturquoise;">murder</span></a>
+	<nav class="topnav">
+		<a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
 	</nav>
 	<div class="container">
 		<div class="video-container">
