--- a/ProjekatWeb/WebContent/Register.html
+++ b/ProjekatWeb/WebContent/Register.html
@@ -9,7 +9,8 @@
 <script type="text/javascript" src="js/register.js"></script>
 </head>
 <body>
- <div class="topnav" id="myTopnav">
+ <div class="topnav">
+ <a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
   <a href="index.html" >Home</a>
 </div> 
 	<form>
