--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -11,10 +11,10 @@
 <title>User</title>
 </head>
 <body>
-	<nav class="topnav" id="myTopnav">
-		<a href="index.html">Copyright <span style="color: darkturquoise;">murder</span></a>
+	<nav class="topnav">
+		<a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
 		<a href="LogOutServlet">Sign out</a>
-		 <a href="index.html" class="active">Home</a>
+		 <a href="index.html">Home</a>
 	</nav>
 	<div class="container">
 		<div class="user-info">
