--- a/ProjekatWeb/WebContent/AddVideo.html
+++ b/ProjekatWeb/WebContent/AddVideo.html
@@ -3,17 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <link rel="stylesheet" type="text/css" href="css/admin.css">
- <script type="text/javascript" src="jquery-3.2.1.js"></script>
- <script type="text/javascript" src="js/admin.js"></script>
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="css/addVideo.css">
+<script type="text/javascript" src="jquery-3.2.1.js"></script>
+<script type="text/javascript" src="js/addVideo.js"></script>
 <title>Add video</title>
 </head>
 <body>
-<nav class="topnav">
-  <a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
-  <a href="index.html">Home</a>
-</nav> 
+	<nav class="topnav">
+		<a href="index.html" id="logo">Copyright <span
+			style="color: darkturquoise;">murder</span></a> <a href="index.html">Home</a>
+	</nav>
+	<div class="container">
+		<h1>Add video</h1>
+		<p>Please fill in this form to add your video.</p>
+		<p>Fields with * are required</p>
+		<hr>
+		<form>
+			<label for="url">Video URL*</label> <input type="text" id="url"
+				name="url" placeholder="Video URL.." required="required"> <label
+				for="name">Video name*</label> <input type="text" id="name"
+				name="name" placeholder="Video name name.." required="required">
 
+			<label for="visibility">Visibility*</label> <select id="visibility"
+				name="visibility">
+				<option value="public">Public</option>
+				<option value="private">Private</option>
+				<option value="unlisted">Unlisted</option>
+			</select> 
+			<label for="allowComments">Allow comments*</label> <select id="allowComments"
+				name="allowComments">
+				<option value="true">Allow</option>
+				<option value="false">Don't allow</option>
+			</select> 
+			<label for="allowRating">Allow rating*</label> <select id="allowRating"
+				name="allowRating">
+				<option value="true">Allow</option>
+				<option value="false">Don't allow</option>
+			</select> 
+		<label for="description">Description</label>
+			<textarea id="description" name="description"
+				placeholder="Short description.." maxlength="50"
+				style="height: 100px"></textarea>
+			<p id="message"></p>
+			<input type="submit" value="Submit" id="submit">
+		</form>
+	</div>
 </body>
 </html>
