--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -13,6 +13,7 @@
 <body>
 	<nav class="topnav">
 		<a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
+		<a href="AddVideo.html">Add video</a>
 		<a href="LogOutServlet">Sign out</a>
 		 <a href="index.html">Home</a>
 	</nav>
