Created functionality for editing users

--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -17,6 +17,7 @@
 		<a href="LogOutServlet">Sign out</a>
 		 <a href="index.html">Home</a>
 	</nav>
+	<div class="grid">
 	<div class="container">
 		<div class="user-info">
 			<div class="row" id="videos">
@@ -43,6 +44,14 @@
 			<h3>Subscribed on:</h3>
 			<div class="row" id="subscribers">
 
+			</div>
+		</div>
+	</div>
+		<div class="menu-button">
+			<i class="fa fa-th" style="font-size: 36px" id="menu"
+				onclick="openNav()"></i>
+			<div class="user-menu" id="user-menu">
+				
 			</div>
 		</div>
 	</div>
