--- a/ProjekatWeb/WebContent/EditVideo.html
+++ b/ProjekatWeb/WebContent/EditVideo.html
@@ -15,7 +15,7 @@
   <a href="#contact" onclick="openNav()">Sign in</a>
   <a href="index.html">Home</a>
 </nav>
-<div class="container">
+<div class="container-form">
 <form>
 			<label for="visibility">Visibility</label> <select id="visibility"
 				name="visibility">
@@ -29,15 +29,10 @@
 				<option value="false">Don't allow</option>
 			</select> 
 			
-			<label for="allowRating">Allow rating</label> 
-			<label class="container-cb">Allow
-			  <input type="radio" id="true">
+				<label class="container">Allow Rating
+			  <input type="checkbox" id="allowRating">
 			  <span class="checkmark"></span>
 			</label>
-			<label class="container-cb">Don't allow
-			  <input type="radio" id="false">
-			  <span class="checkmark"></span>
-			</label> 
 		
 		<label for="description">Description</label>
 			<textarea id="description" name="description"
