Created functionality for deleting video and user

--- a/ProjekatWeb/WebContent/EditVideo.html
+++ b/ProjekatWeb/WebContent/EditVideo.html
@@ -38,6 +38,10 @@
 			<textarea id="description" name="description"
 				placeholder="Short description.." maxlength="50"
 				style="height: 100px"></textarea>
+				<label class="container" id="block">Block
+			  <input type="checkbox" >
+			  <span class="checkmark"></span>
+			</label>
 			<p id="message"></p>
 			<input type="submit" value="Submit" id="submit">
 		</form>
