Created functionality for add profile photos

--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -23,7 +23,7 @@
 			<div class="row" id="videos">
 				<div class="column">
 					<div class="card">
-						<img src="photos/slika.jpg" alt="User">
+						<img id="userPhoto" src="" alt="User">
 						<div class="container-info">
 							<h2 id="username"></h2>
 							<p id="subsNumber"></p>
