--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -16,8 +16,8 @@
   <a href="index.html">Home</a>
   <div class="search-container">
     <form>
-      <input type="text" placeholder="Search videos..."  id="search" name="search">
-      <button type="submit"><i class="fa fa-search" id="search-Button"></i></button>
+      <input type="text" placeholder="Search videos..."  id="search"  name="search">
+      <input type="button" id="searchButt" value="Search">
     </form>
   </div>
 </nav> 
