--- a/ProjekatWeb/WebContent/Register.html
+++ b/ProjekatWeb/WebContent/Register.html
@@ -13,7 +13,7 @@
  <a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
   <a href="index.html" >Home</a>
 </div> 
-	<form>
+	<form action="RegisterServlet" method="post" enctype="multipart/form-data">
   <div class="container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
@@ -34,6 +34,9 @@
 
      <label><b>Email *</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
+      <label><b>Upload your photo</b></label>
+    <input type="file" name="photo" multiple="multiple" >
+    
     <p id="message"></p>
     <div class="clearfix">
       <button type="submit" class="signupbtn" id="submit">Sign Up</button>
