Edited functionality for edit and delete comment

--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -68,6 +68,13 @@
 			</div>
 		</div>
 	</div>
+	<div class="editCommentDiv">
+	<textarea name="Text2" id="textAreaUpdate" placeholder="Add your comment" maxlength="80"></textarea>
+	<div class="buttons">
+	<input type="button" value="Cancel" id="cancel">
+	<input type="button" value="Edit" id="editCommentSubmit">
+	</div>
+	</div>
 </body>
 <script type="text/javascript">
 	var coll = document.getElementsByClassName("collapsible");
