--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="owner-info">
 				<p class="user-link">
-					<img src="photos/slika.jpg" class="avatar"><a href=""
+					<img src="" id="userPhoto" class="avatar"><a href=""
 						id="userName"></a>
 				</p>
 				<input type="button" id="subscribe" value="Subscribe">
